[package]
name = "audio_player"
version = "0.1.0"
authors = ["matzemathics <geige.matze@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "audio_player"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
