[package]
name = "neon-test"
version = "0.1.0"
authors = ["matze"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_test"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
cpal = "0.11.0"
ringbuf = "0.2.1"
hound = "3.4.0"
samplerate = "0.2.1"
queue = "0.3.1"
minimp3 = "0.3.3"
id3 = "0.3.0"
mime = "0.3.15"
mime-detective = "0.2.3"
opusfile = { path = "opusfile" }
claxon = "0.4.2"
lazy_static = "1.4.0"
futures = "0.3.1"